# repository-updater

./: .codeclimate.yml  .gitignore  .pylintrc  README.md  action.yaml  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  release-drafter.yml  settings.yml
.github/workflows/: additional-tags.yaml  dependency-review.yaml  labels.yaml  linting.yaml  lock.yaml  release-drafter.yaml  stale.yaml
action/: Dockerfile  entrypoint.sh
docker/: Dockerfile
repositoryupdater/: __init__.py  __main__.py  addon.py  app.py  cli.py  const.py  dockerhub.py  github.py  repository.py
